# tetris

./: .gitignore  CMakeLists.txt  LICENSE  README.md  strip
src/: assets.c  assets.h  button.c  button.h  color.c  color.h  consts.h  game.c  game.h  main.c  main_menu.c  main_menu.h  move_state.h  option.h  option_int.h  optional.h  optional_int.h  rect.h  rotation.h  score.c  score.h  settings.c  settings.h  tetromino.c  tetromino.h  tetromino_state.h  tetromino_type.h  text.c  text.h  ui.c  ui.h  vec2.c  vec2.h
